Add a "briefRepresentation" query param to the "/applications/{clientId}/consent" endpoint (defaults to true). If set to "false", the endpoint will provide an enhanced ConsentScopeRepresentation.
Closes #24436

Signed-off-by: bal1imb <Artur.Baltabayev@bosch.com>